# easyread

./: pyproject.toml
app/: main.py
app/data/: books.json
